# llm-monitoring

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: deploy.yaml
docker/langfuse-server/: docker-compose.yaml  init.env
docker/mlflow-server/: docker-compose.yaml  mlflow.Dockerfile
docs/: docusaurus.config.ts  package.json
docs/docs/databricks_mlflow/: _category_.json
docs/docs/installation/: _category_.json  databricks-mlflow.md  langsmith.md  managed-mlflow.md  self-hosting-langfuse.md  self-hosting-mlflow.md  tavily.md
docs/docs/langsmith/: _category_.json
docs/docs/prompt_registry/: _category_.json  databricks-mlflow.md  langsmith.md  self-hosting-langfuse.md  self-hosting-mlflow.md
docs/docs/self_hosting_langfuse/: _category_.json
docs/docs/self_hosting_mlflow/: _category_.json
docs/docs/tracing/: _category_.json  databricks-mlflow.md  (+3 more)
envs/: common.env.template  managed_service.env.template  self_hosting.env.template
notebooks/: 01_self_hosting_tracing.ipynb  02_managed_service_tracing.ipynb  README.md
notebooks/databricks_mlflow/: .env.template  01_tracing.ipynb  02_prompt.ipynb  03_dataset.ipynb  04_evaluation.ipynb  04_experiment.ipynb  README.md
notebooks/langsmith/: .env.template  01_tracing.ipynb  02_prompt.ipynb  03_dataset.ipynb  04_evaluation.ipynb  04_experiment.ipynb
notebooks/self_hosting_langfuse/: .env.template  01_tracing.ipynb  02_prompt.ipynb  03_dataset.ipynb  04_evaluation.ipynb  04_experiment.ipynb  README.md
notebooks/self_hosting_mlflow/: .env.template  01_tracing.ipynb  02_prompt.ipynb  README.md
(+22 files in other folders)
