[project]
name = "llm-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain==0.3.26",
    "langchain-openai==0.3.27",
    "langchain-tavily==0.2.6",
    "langgraph==0.5.1",
    "mlflow==3.1.1",
    "python-dotenv==1.1.1",
    "tavily-python==0.7.9",
    "boto3==1.34.0",
    "langfuse==3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
